# mqt

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: constants.rs  lib.rs
common/src/utils/: mod.rs  ntfy.rs
position/: Cargo.toml
position/src/: lib.rs  models.rs  position_manager.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  position.rs  server.rs  stockdata.rs  strategy.rs
stockdata/: Cargo.toml
stockdata/output/: stock_data_20250515_002953.json
stockdata/src/: io.rs  lib.rs  main.rs  models.rs  parser.rs  scraper.rs  scripts.rs  server.rs  tabs.rs
strategy/: Cargo.toml
strategy/src/: backtest.rs  lib.rs  models.rs  strategy.rs
