[workspace]
members = [
    "stockdata",
    "position",
    "strategy",
    "client",
    "server",
]
resolver = "2"

[package]
name = "mqt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
fantoccini.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
chrono.workspace = true
reqwest.workspace = true
stockdata = { path = "./stockdata" }
server = { path = "./server" }
position = { path = "./position" }
strategy = { path = "./strategy" }

[workspace.dependencies]
fantoccini = "0.19.3"
actix-web = "4.4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] } 
