[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true } 
server = { path = "../server" }
common = { path = "../common" }