[package]
name = "position"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
stockdata = { path = "../stockdata" }
common = { path = "../common" } 