[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
stockdata = { path = "../stockdata" }
position = { path = "../position" }
strategy = { path = "../strategy" }
common = { path = "../common" }