[package]
name = "stockdata"
version = "0.1.0"
edition = "2021"

[dependencies]
fantoccini = "0.19.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4"
actix-web = "4.4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"